# vcf_parser

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  main.rs  parser.rs  utils.rs  variant.rs  vcfparser.rs
test/: filter.yml  test.vcf  test_samples.vcf
