[package]
name = "vcf_parser"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.6"
calm_io = "0.1.1"
clap = { version = "4.5.1", features = ["derive"] }
flate2 = "1.0.28"
rayon = "1.9.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.9.0"
serde_yaml = "0.9.33"
#vcf = "0.6.1". The fork enables parallel parsing
vcf = { git = "https://github.com/logust79/vcf-rs.git", branch = "master" }

[profile.release-with-debug]
inherits = "release"
debug = true

